[package]
name = "sfh-mirror"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
dotenvy = "0.15.7"
futures = "0.3.30"
lazy_static = "1.4.0"
reqwest = { version = "0.11.24", features = ["json", "stream"] }
rocket = { version = "0.5.0", features = ["json"] }
rocket_db_pools = { version = "0.1.0", features = ["sqlx"] }
serde = { version = "*", features = ["serde_derive"] }
serde-aux = "4.4.0"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "sqlite"] }
