[package]
name = "sfh-mirror"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
dotenvy = "0.15.7"
futures = "0.3.30"
lazy_static = "1.4.0"
reqwest = { version = "0.12.4", features = ["json", "stream"] }
rocket = { version = "0.5.0", features = ["json"] }
rocket_db_pools = { version = "0.1.0", features = ["sqlx"] }
serde = { version = "*", features = ["serde_derive"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite"] }
thiserror = "1.0.61"
